<resources>
    <string name="app_name">Movies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register!!!</string>
    <string name="user">User Name</string>
    <string name="password">Password</string>    ç
    <string name="titleTool">Movies Kinal</string>
    <string name="title_activity_titular">TitularActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="loggin">Loggin</string>
    <string name="main">Main</string>
    <string name="title_activity_register">Register</string>
    <string name="welcome">Welcome to our Application</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="createReg">Create Register</string>
    <string name="item">Selected Item</string>
    <string name="viewDetails">View Detail</string>
    <string name="addFav">Add a Favorites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="peli">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="hours">Hour</string>
    <string name="settings">Settings</string>
    <string name="title_activity_splash">Cine</string>
    <string name="notifications">Notifications</string>
    <string name="notification_summary">Allow the app to send you notifications</string>
    <string name="countries">Countries</string>
    <string name="countries_summary">Select your country</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="password2">Repeat Password</string>
    <string name="rem">Remember me</string>
    <string name="isRemembered">Remember</string>
    <string name="userRemembered">UserRemember</string>
    <string name="sharedClass">class</string>
    <string name="removeFav">Remove item from Favorites</string>
    <string name="udpate">Update Profile</string>
    <string name="goR">Return Main</string>

</resources>
