<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:key="is_notification_enable"
            android:title="@string/notifications"
            android:summary="@string/notification_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/countries">
        <ListPreference
            android:key="main_country"
            android:title="@string/countries"
            android:summary="@string/countries_summary"
            android:dialogTitle="@string/countries_summary"
            android:entries="@array/countriesArray"
            android:entryValues="@array/countriesCodesArray"/>
    </PreferenceCategory>

</PreferenceScreen>