<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="gt.edu.kinal.jmonterroso.movies.Register"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/LayoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar" ></include>
    </LinearLayout>
    <TextView
        android:id="@+id/textRegister"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LayoutToolBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="150dp"
        android:textSize="25sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/user"
        android:layout_centerHorizontal="true"
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/userText"
        android:layout_below="@+id/user"
        android:layout_width="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_user_name"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"/>

    <TextView
        android:id="@+id/pass"
        android:layout_centerHorizontal="true"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/passText"
        android:layout_below="@+id/pass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_pass_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:password="true" />

    <TextView
        android:id="@+id/pass2"
        android:layout_centerHorizontal="true"
        android:text="@string/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/passText2"
        android:layout_below="@+id/pass2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_pass_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:password="true"/>

    <TextView
        android:id="@+id/email"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_below="@+id/email"
        android:layout_width="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_email"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/regit"
        android:background="#ffffff"
        android:textSize="15sp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/background"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/logins"
        android:background="@android:color/transparent"
        android:textSize="15sp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/textColorPrimary"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
